# Credit-Score-Bias-Visualizer

./: CMakeLists.txt  CNAME  Dockerfile  README.md  asset-manifest.json  bias.cpp  index.html  main.cpp  package-lock.json  package.json  requirements.txt  settings.json  test_runner  user.h  userlist.h
backend/: .gitignore  app  app.py  bias.cpp  bias.py  custom_large_dataset.json  filters.cpp  filters.h  firebase.py  main.cpp  requirements.txt  test_filters.py  user.h  websocket_server  websocket_server.cpp
backend/routes/: api.py
backend/src/: bias.cpp  bias.h  filters.cpp  filters.h  main.cpp  userlist.h
backend/tests/: test_bias.cpp  test_bias.h  test_filters.cpp  test_filters.h  test_runner.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  ChartComponent.js  MetricsContext.js  WebSocketUpload.js  home.js  index.js  instructions.js  learnmore.js  login.js  signup.js  snapshots.js  upload.js
frontend/src/css/: Home.css  LearnMore.css  LoginButton.css
static/css/: main.25d0e537.css  main.25d0e537.css.map  main.503cfbe6.css  main.503cfbe6.css.map  main.57dbab45.css  main.57dbab45.css.map  main.93ab15b9.css  main.93ab15b9.css.map  main.aba77356.css  main.aba77356.css.map
static/js/: main.1b0626ef.js  main.1b0626ef.js.map  main.1caafda8.js  main.1caafda8.js.map  main.3c0df11e.js  main.3c0df11e.js.map  main.4e10025a.js  main.4e10025a.js.map  main.c480816f.js  main.c480816f.js.map  main.dd8dea4f.js  main.dd8dea4f.js.map  main.fad25588.js  main.fad25588.js.map  main.ff58a4d4.js  main.ff58a4d4.js.map
(+1 files in other folders)
